# ghterm

./: .gitignore  .vimspector.json  Cargo.toml
.vim/: session.vim  vimrc.local
data/requests/: pr_conversation.gql  pr_list.gql
src/: app.rs  backend.rs  error.rs  frontend.rs  logs.rs  main.rs  test.rs
src/app/: events.rs
src/backend/: api.rs  diff.rs  gh.rs  pr.rs  task.rs
src/frontend/: conversation_tab.rs  main_screen.rs  main_screen_handler.rs  repo_selection.rs  repo_selection_handler.rs  screen.rs  util.rs
src/frontend/conversation_tab/: conversation_data.rs  conversation_draw.rs  conversation_tree.rs  conversation_tree_content.rs  conversation_tree_state.rs
test/: request.gql  request.sh
