[package]
name = "ghterm"
version = "0.1.0"
authors = ["Sergey Pikhota <sergey.pikhota@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
json = "0.12.4"
chrono = "0.4"
args = "2.0"
getopts = "0.2.21"
